<resources>
    <string name="app_name">TodoDemo</string>

    <!--登录注册界面-->
    <string name="welcome">Welcome</string>
    <string name="welcome_register">欢迎注册账号</string>
    <string name="input_account">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_rePassword">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_to_register">没有账号?点击注册</string>
    <string name="register_to_login">已有账号?点击登录</string>

    <!--todo界面-->
    <string name="toolbar">Todo</string>
    <string name="radio_todo">未完成</string>
    <string name="radio_done">已完成</string>

    <!--分类-->
    <string name="classify_name">全部</string>
    <string name="classify_title">分类</string>

    <!--添加待办-->
    <string name="tb_add">添加待办</string>
    <string name="add">添加</string>
    <string name="title">待办事项</string>
    <string name="delete">删除</string>
    <string name="classification">待办分类</string>
    <string name="time">选择完成时间</string>

    <!--搜索-->
    <string name="tb_search">搜索</string>
    <string name="tb_result">搜索结果</string>
    
    <!--账号功能-->
    <string name="public_account">公共账号</string>
    <string name="change_username">修改用户名</string>
    <string name="change_password">修改密码</string>
    <string name="exit_account">退出账号</string>
    <string name="delete_account">注销账号</string>

    <!--dialog-->
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>

    <!--popupmenu-->
    <string name="pop_delete">删除该项</string>
    <string name="pop_more">多选</string>

</resources>