<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_register"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/til_reg_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_account"
        style="@style/TextInputEditRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_account"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_password"
        style="@style/TextInputEditRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        app:endIconMode="password_toggle"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_reg_account"
        app:layout_constraintVertical_bias="0.1"
        app:startIconDrawable="@drawable/ic_baseline_keyboard_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_repassword"
        style="@style/TextInputEditRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_rePassword"
        app:endIconMode="password_toggle"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_reg_password"
        app:layout_constraintVertical_bias="0.1"
        app:startIconDrawable="@drawable/ic_baseline_keyboard_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_to_login"
        app:layout_constraintBottom_toTopOf="@+id/mb_register"
        app:layout_constraintEnd_toEndOf="@+id/til_repassword"
        app:layout_constraintTop_toBottomOf="@+id/til_repassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/main_color"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/register"
        android:textSize="16sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_repassword"
        app:layout_constraintVertical_bias="0.2" />



</androidx.constraintlayout.widget.ConstraintLayout>