<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round"
    android:minWidth="300dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_title_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/tb_add"
        android:textSize="19sp"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/TextInputEditRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_classify"
        style="@style/TextInputEditRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/classification">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_et_classify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        style="@style/TextInputEditRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/time"
        app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
        app:endIconMode="custom"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/mb_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/main_color"
        android:paddingVertical="8dp"
        android:text="@string/add"
        android:textSize="17sp"
        app:cornerRadius="50dp" />

</LinearLayout>